--- a/portfolio-2025/contact.html
+++ b/portfolio-2025/contact.html
@@ -85,8 +85,8 @@
         <p>
           Pour les passionnés de design et de développement, alliant
           esthétique et performance, créativité et technologie.<br />
-          Renseignez-vous <a href="/pages/contact.html">ici</a> ou continuez à
-          explorer mon <a href="/pages/project.html">projet</a>.
+          Renseignez-vous <a href="./contact.html">ici</a> ou continuez à
+          explorer mon <a href="./project.html">projet</a>.
         </p>
       </div>
     </div>
