--- a/portfolio-2025/project.html
+++ b/portfolio-2025/project.html
@@ -28,7 +28,7 @@
                     <h2>ESOLY</h2>
                     <p>UX/UI Design</p>
                     
-                    <a href="./pdf/Projet interactif - ESOLY.pdf" target="_blank">
+                    <a href="./pdf/ESOLY.pdf" target="_blank">
                         <img src="./images/Shot-1.png" alt="ESOLY" />
                     </a>
                 </div>
