--- a/portfolio-2025/index.html
+++ b/portfolio-2025/index.html
@@ -150,7 +150,7 @@
 
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <a href="./pdf/Projet interactif - ESOLY.pdf" target="_blank">
+          <a href="./pdf/ESOLY.pdf" target="_blank">
             <img src="./images/Shot.png" alt="ESOLY" />
         </a>
           <p>ESOLY</p>
