--- a/portfolio-2025/about.html
+++ b/portfolio-2025/about.html
@@ -136,7 +136,7 @@
         <div class="explore">
           <h3><span class="custom-font">( explore )</span></h3>
           <div class="explore-images">
-            <a href="./pdf/Projet interactif - ESOLY.pdf" target="_blank">
+            <a href="./pdf/ESOLY.pdf" target="_blank">
               <img src="./images/Shot-1.png" alt="ESOLY" />
             </a>
             <a href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/" target="_blank">
