--- a/portfolio-2025/louvre.html
+++ b/portfolio-2025/louvre.html
@@ -717,9 +717,9 @@
             <p>Curieux ? Découvrez le prototype et aidez-moi à le façonner.</p>
             <iframe
               style="border: 1px solid rgba(0, 0, 0, 0.1)"
-              width="1300"
-              height="850"
-              src="https://embed.figma.com/proto/OPwvBdy2uaEw36kGu7vaFD/Louvre?page-id=26%3A184&node-id=427-4600&viewport=342%2C1715%2C0.2&scaling=scale-down&content-scaling=fixed&starting-point-node-id=427%3A4600&show-proto-sidebar=1&embed-host=share"
+              width="800"
+              height="450"
+              src="https://embed.figma.com/proto/I9sXAo6gbvbmsxaLG11UEm/SeLouvre?page-id=50%3A1496&node-id=412-3717&viewport=102%2C-205%2C0.06&scaling=scale-down&content-scaling=fixed&starting-point-node-id=412%3A3717&embed-host=share"
               allowfullscreen
             ></iframe>
           </div>
