--- a/portfolio-2025/about.html
+++ b/portfolio-2025/about.html
@@ -140,12 +140,18 @@
               <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/shot-1.png" alt="ESOLY" />
             </a>
             <a href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/" target="_blank">
-              <img src="./images/cardience.png" alt="CARDIENCE" />
+              <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747643104/Cardience.png" alt="CARDIENCE" />
           </a>
           <a href="./louvre.html" target="_blank">
             <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747599746/Louvre.png" alt="MUTUO" />
           <a href="https://phuongnee.github.io/data-website/data-website/index.html" target="_blank">
             <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577476/dataweb.jpg" alt="STOP PLASTIQUE" />
+          </a>
+          <a href="https://zen-sai.vercel.app" target="_blank">
+            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png" alt="Zen-Sai" />
+          </a>
+          <a href="https://phuongnee.github.io/stop-plastique/stop-plastique/index.html" target="_blank">
+            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png" alt="L'esclavage" />
           </a>
           </div>
         </div>
