--- a/portfolio-2025/index.html
+++ b/portfolio-2025/index.html
@@ -154,47 +154,66 @@
           <hr class="line" />
         </div>
       </div>
+      <div class="container-wrap">
+        <p class="sub-title-projet">
+          Une sélection de travaux personnels, collaborations créatives et
+          missions en freelance. Chaque projet reflète ma passion, mon
+          engagement et mon évolution dans le domaine.
+        </p>
+        <p class="sub-title-projet">
+          <span class="custom-font">
+            <a href="./projet.html" target="_blank" class="link-behance"
+              >( Voir tous les projets )</a
+            >
+          </span>
+        </p>
+        <div class="portfolio-grid">
+          <div class="portfolio-item">
+            <a href="./louvre.html" target="_blank">
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747599746/Louvre.png"
+                alt="SeLouvre"
+            /></a>
+            <p>SE LOUVRE</p>
+            <p class="sub-title">UX/UI Design</p>
+          </div>
 
-      <div class="portfolio-grid">
-        <div class="portfolio-item">
-          <a href="./louvre.html" target="_blank">
-            <img
-              src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747599746/Louvre.png"
-              alt="SeLouvre"
-          /></a>
-          <p>SE LOUVRE</p>
-          <p class="sub-title">UX/UI Design</p>
-        </div>
-        
-        <div class="portfolio-item">
-          <a
-            href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/"
-            target="_blank"
-          >
-            <img src="./images/cardience.png" alt="CARDIENCE" />
-          </a>
-          <p>CARDIENCE</p>
-          <p class="sub-title">Web Design</p>
-        </div>
-        <div class="portfolio-item">
-          <a href="./pdf/ESOLY.pdf" target="_blank">
-            <img
-              src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/esoly.png"
-              alt="ESOLY"
-            />
-          </a>
-          <p>ESOLY</p>
-          <p class="sub-title">UX/UI Design</p>
-        </div>
-        <div class="portfolio-item">
-          <a
-            href="https://phuongnee.github.io/data-website/data-website/index.html"
-            target="_blank"
-          >
-            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577476/dataweb.jpg" alt="Statup.GG" />
-          </a>
-          <p>STOP PLASTIQUE</p>
-          <p class="sub-title">Web Design</p>
+          <div class="portfolio-item">
+            <a
+              href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747643104/Cardience.png"
+                alt="CARDIENCE"
+              />
+            </a>
+            <p>CARDIENCE</p>
+            <p class="sub-title">Web Design</p>
+          </div>
+          <div class="portfolio-item">
+            <a href="./pdf/ESOLY.pdf" target="_blank">
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/esoly.png"
+                alt="ESOLY"
+              />
+            </a>
+            <p>ESOLY</p>
+            <p class="sub-title">UX/UI Design</p>
+          </div>
+          <div class="portfolio-item">
+            <a
+              href="https://phuongnee.github.io/data-website/data-website/index.html"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577476/dataweb.jpg"
+                alt="Statup.GG"
+              />
+            </a>
+            <p>STOP PLASTIQUE</p>
+            <p class="sub-title">Web Design</p>
+          </div>
         </div>
       </div>
     </section>
@@ -273,7 +292,10 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747603028/me.jpg" alt="About Me" />
+          <img
+            src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747603028/me.jpg"
+            alt="About Me"
+          />
           <button class="arrow-button" onclick="location.href='about.html'">
             →
           </button>
