--- a/portfolio-2025/louvre.html
+++ b/portfolio-2025/louvre.html
@@ -724,13 +724,58 @@
             ></iframe>
           </div>
         </div>
-        <div class="conclusion">
-          <div class="text-conclusion">
-            <h2>
-              Merci Pour Votre<span class="custom-font" style="color: #f9f8f3">
-                Attention</span
-              >
-            </h2>
+        <div class="explore">
+          <h3>
+            <a href="./projet.html"
+              ><span class="custom-font">( explore )</span></a
+            >
+          </h3>
+          <div class="explore-images">
+            <a href="./pdf/ESOLY.pdf" target="_blank">
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/shot-1.png"
+                alt="ESOLY"
+              />
+            </a>
+            <a
+              href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747643104/Cardience.png"
+                alt="CARDIENCE"
+              />
+            </a>
+            <a href="./louvre.html" target="_blank">
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747599746/Louvre.png"
+                alt="Louvre"
+              />
+            </a>
+            <a
+              href="https://phuongnee.github.io/data-website/data-website/index.html"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577476/dataweb.jpg"
+                alt="STOP PLASTIQUE"
+              />
+            </a>
+            <a href="https://zen-sai.vercel.app" target="_blank">
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png"
+                alt="Zen-Sai"
+              />
+            </a>
+            <a
+              href="https://phuongnee.github.io/stop-plastique/stop-plastique/index.html"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png"
+                alt="L'esclavage"
+              />
+            </a>
           </div>
         </div>
         <section id="contact-section">
