--- a/portfolio-2025/projet.html
+++ b/portfolio-2025/projet.html
@@ -140,7 +140,9 @@
                 href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/"
                 target="_blank"
               >
-                <img src="./images/cardience.png" alt="P3"
+                <img
+                  src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747643104/Cardience.png"
+                  alt="P3"
               /></a>
               <div class="text-card">
                 <h2>Cardience</h2>
@@ -160,10 +162,44 @@
                 <p>Web Design</p>
               </div>
             </div>
+            <div class="character-card">
+              <a href="https://zen-sai.vercel.app" target="_blank">
+                <img
+                  src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png"
+                  alt="P5"
+              /></a>
+              <div class="text-card">
+                <h2>Zen-Sai</h2>
+                <p>web Design</p>
+              </div>
+            </div>
+            <div class="character-card">
+              <a href="./louvre.html">
+                <img
+                  src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747599746/Louvre.png"
+                  alt="P6"
+              /></a>
+              <div class="text-card">
+                <h2>Fondation de memoire de l'esclavage</h2>
+                <p>Web Design</p>
+              </div>
+            </div>
           </div>
           <button class="next"><i class="fas fa-chevron-right"></i></button>
         </div>
       </div>
+      <div class="contact">
+        <h3><span class="custom-font">( contact )</span></h3>
+        <div class="contact-text">
+          <p>
+            Pour les passionnés de design et de développement, alliant
+            esthétique et performance, créativité et technologie.<br />
+            Renseignez-vous <a href="/contact.html">ici</a> ou continuez à
+            explorer mon <a href="./projet.html">projet</a>.
+          </p>
+        </div>
+      </div>
+    </div>
       <section id="contact-section">
         <!-- Get in Touch Title -->
         <div class="contact-header">
