--- a/portfolio-2025/about.html
+++ b/portfolio-2025/about.html
@@ -136,9 +136,6 @@
         <div class="explore">
           <h3><a href="./projet.html"><span class="custom-font">( explore )</span></a></h3>
           <div class="explore-images">
-            <a href="./pdf/Projet interactif - ESOLY.pdf" target="_blank">
-              <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/shot-1.png" alt="ESOLY" />
-            </a>
             <a href="https://phuongnee.github.io/projet-edito/carte-postale/index.html#/" target="_blank">
               <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747643104/Cardience.png" alt="CARDIENCE" />
           </a>
@@ -150,9 +147,13 @@
           <a href="https://zen-sai.vercel.app" target="_blank">
             <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png" alt="Zen-Sai" />
           </a>
-          <a href="https://phuongnee.github.io/stop-plastique/stop-plastique/index.html" target="_blank">
-            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747642969/Zen-Sai.png" alt="L'esclavage" />
+          <a href="./pdf/ESOLY.pdf" target="_blank">
+            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747577477/shot-1.png" alt="ESOLY" />
           </a>
+          <a href="https://phuongnee.github.io/Fondation-de-m-moire-de-l-eclavage/projet-esclavage/index.html" target="_blank">
+            <img src="https://res.cloudinary.com/da9k32mdb/image/upload/v1747677739/slavery.png" alt="L'esclavage" />
+          </a>
+          
           </div>
         </div>
       </div>
@@ -163,7 +164,7 @@
             Pour les passionnés de design et de développement, alliant
             esthétique et performance, créativité et technologie.<br />
             Renseignez-vous <a href="./contact.html">ici</a> ou continuez à
-            explorer mon <a href="./project.html">projet</a>.
+            explorer mon <a href="./projet.html">projet</a>.
           </p>
         </div>
       </div>
